GitVersion1/objects/CAR_RebateReqs__c.object
<CustomObject>
    <fields>
        <fullName>Actual_session_user__c</fullName>
        <description>Actual active session user for dynamic filtering on grid views (works as &apos;me&apos;)</description>
        <formula>$User.Role_Name__c</formula>
        <label>Actual session user</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Rebate_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAR_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Rebate Requests (Payer)</relationshipLabel>
        <relationshipName>Rebate_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAR_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Manager Approved</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cargill_Request_Type__c</fullName>
        <inlineHelpText>Please select correct request type</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rebate Request</fullName>
                    <default>true</default>
                    <label>Rebate Request</label>
                </value>
                <value>
                    <fullName>Credit Limit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Health_Actual_Margin__c</fullName>
        <formula>CAR_Account__r.Customer_Health_Actual_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Health - Actual Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Health_Target_Margin__c</fullName>
        <formula>CAR_Account__r.Customer_Health_Target_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Health - Target Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ERP_ID__c</fullName>
        <formula>CAR_Account__r.ERP_Payer_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ERP ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Payer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Payer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inform_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inform Supervisor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Name__c</fullName>
        <formula>Owner:User.Manager.FirstName&amp;&quot; &quot;&amp;Owner:User.Manager.LastName</formula>
        <label>Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Role__c</fullName>
        <description>Manager Role for filtering on list views</description>
        <formula>Owner:User.Manager.Role_Name__c</formula>
        <label>Manager Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_Manager_Approval__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Needs Manager Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>Owner Role for easy filtering on grid view</description>
        <formula>Owner:User.Role_Name__c</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Rebate Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.CAR_Account__c</field>
                <operation>equals</operation>
                <valueField>CAR_RebateReqs__c.CAR_Account__r.Id</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Id</field>
                <operation>notEqual</operation>
                <valueField>CAR_RebateReqs__c.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CAR_RebateReqs__c</referenceTo>
        <relationshipLabel>Rebate Requests</relationshipLabel>
        <relationshipName>Rebate_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payer_Account_Record_Type__c</fullName>
        <formula>CAR_Account__r.RecordType.DeveloperName</formula>
        <label>Payer Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejection_checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejection checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Req_Processing_Log__c</fullName>
        <label>Req Processing Log</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Second_Manager_Email__c</fullName>
        <label>Second Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <label>Valid From</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Rebate Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CAR_Status__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>CAR_Account__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>Inform_Supervisor__c</columns>
        <filterScope>Mine</filterScope>
        <label>All (mine only)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Completed</fullName>
        <columns>NAME</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>Inform_Supervisor__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAR_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>All Completed</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global_Admin</role>
            <role>Poland_MasterData_DataSteward</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Data_Steward_Approved</fullName>
        <columns>NAME</columns>
        <columns>ERP_ID__c</columns>
        <columns>CAR_Account__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>Inform_Supervisor__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAR_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>All Data Steward Approved</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ended_In_Last_3_days</fullName>
        <columns>Valid_To__c</columns>
        <columns>Valid_From__c</columns>
        <columns>NAME</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Valid_To__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>All Ended In Last 3 days (only mine)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ended_In_Last_3_days_all</fullName>
        <columns>Valid_To__c</columns>
        <columns>Valid_From__c</columns>
        <columns>NAME</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Valid_To__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:3</value>
        </filters>
        <label>All Ended In Last 3 days (all)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ending_In_Next_14_days</fullName>
        <columns>Valid_To__c</columns>
        <columns>Valid_From__c</columns>
        <columns>NAME</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Valid_To__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:14</value>
        </filters>
        <label>All Ending In Next 14 days (only mine)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ending_In_Next_3_days</fullName>
        <columns>Valid_To__c</columns>
        <columns>Valid_From__c</columns>
        <columns>NAME</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Valid_To__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:3</value>
        </filters>
        <label>All Ending In Next 3 days (only mine)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ending_In_Next_3_days_all</fullName>
        <columns>Valid_To__c</columns>
        <columns>Valid_From__c</columns>
        <columns>NAME</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Valid_To__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:3</value>
        </filters>
        <label>All Ending In Next 3 days (all)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ending_In_Next_7_days</fullName>
        <columns>Valid_To__c</columns>
        <columns>Valid_From__c</columns>
        <columns>NAME</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Valid_To__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>All Ending In Next 7 days (only mine)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Ending_In_Next_7_days_all</fullName>
        <columns>Valid_To__c</columns>
        <columns>Valid_From__c</columns>
        <columns>NAME</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Valid_To__c</field>
            <operation>equals</operation>
            <value>NEXT_N_DAYS:7</value>
        </filters>
        <label>All Ending In Next 7 days (all)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Manager_Approved_awaiting_for_DS</fullName>
        <columns>NAME</columns>
        <columns>ERP_ID__c</columns>
        <columns>CAR_Account__c</columns>
        <columns>Payer_Account_Record_Type__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Manager_Role__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>Inform_Supervisor__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAR_Status__c</field>
            <operation>equals</operation>
            <value>Manager Approved</value>
        </filters>
        <label>All Manager Approved (awaiting for DS)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Manager_Approved_awaiting_for_DS_Payer_rec_type_std</fullName>
        <columns>NAME</columns>
        <columns>ERP_ID__c</columns>
        <columns>CAR_Account__c</columns>
        <columns>Payer_Account_Record_Type__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Manager_Role__c</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>Inform_Supervisor__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAR_Status__c</field>
            <operation>equals</operation>
            <value>Manager Approved</value>
        </filters>
        <filters>
            <field>Payer_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Commercial Customer</value>
        </filters>
        <label>All Manager Approved (for DS Standard t)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_No_Ending_Date</fullName>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>NAME</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>Locked__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Valid_To__c</field>
            <operation>equals</operation>
        </filters>
        <label>All No Ending Date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Rejected</fullName>
        <columns>NAME</columns>
        <columns>ERP_ID__c</columns>
        <columns>CAR_Account__c</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Manager_Name__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>Inform_Supervisor__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAR_Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <label>All Rejected</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Sent</fullName>
        <columns>NAME</columns>
        <columns>Valid_From__c</columns>
        <columns>Valid_To__c</columns>
        <columns>CAR_Account__c</columns>
        <columns>ERP_ID__c</columns>
        <columns>Cargill_Request_Type__c</columns>
        <columns>CAR_Status__c</columns>
        <columns>Inform_Supervisor__c</columns>
        <columns>Needs_Manager_Approval__c</columns>
        <columns>Assigned_To__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAR_Status__c</field>
            <operation>equals</operation>
            <value>Submitted,Manager Approved,Approved</value>
        </filters>
        <label>All Sent</label>
        <language>en_US</language>
        <sharedTo>
            <role>Global_Admin</role>
            <role>Poland_MasterData_DataSteward</role>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RR-{00000}</displayFormat>
        <label>Rebate Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rebate Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Inform_Supervisor</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Inform_Supervisor__c , NOT(Needs_Manager_Approval__c))</errorConditionFormula>
        <errorMessage>Cannot check Inform Supervisor field if Needs Manager field is not checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rebate_Request_Lock_Check</fullName>
        <active>true</active>
        <errorConditionFormula>Locked__c</errorConditionFormula>
        <errorMessage>Rebate Request Record is Locked. Rebate Request cannot be created, edited, or deleted.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Request_must_be_on_Payer_only</fullName>
        <active>true</active>
        <description>Cannot create a request for an account having another parent account.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(CAR_Account__r.ParentId)),NOT(ISPICKVAL(CAR_Account__r.Parent.Type,&quot;Buying Group&quot;)))</errorConditionFormula>
        <errorDisplayField>CAR_Account__c</errorDisplayField>
        <errorMessage>Rebate Request can be only created for the payer. Your account has parent account. Only parent account is acceptable if it is Buying Group.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidFromValidation</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(Valid_From__c )</errorConditionFormula>
        <errorDisplayField>Valid_From__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>